# growmill

./: .gitignore  .gitmodules  CMakeLists.txt  package-lock.json  package.json
example/: box-fixed-height.mil  box-inset.mil  box-stroke-fill.mil  box1.mil  box2.mil  box4.mil  text.mil  two-boxes-same-width.mil
examples/: all.yy
platform/cairo/: CairoText.cc  CairoText.h  VirtualDisk.h  cairo.cc  cairo.cexample
platform/svg/: SVGText.cpp  SVGText.h  VirtualDisk.h  svg.cpp
script/: generate-examples.js
src/core/: AbstractTextSizer.h  AbstractVirtualDisk.h  Color.cpp  Color.h  ConstraintParser.h  ExpressionParser.cpp  ExpressionParser.h  ExpressionPart.cpp  ExpressionPart.h  Node.cpp  Node.h  Rect.h  SimpleVarProvider.h  StringTools.cpp  StringTools.h  SymbolPos.h  VarProvider.h  growmill.h  parse.cpp  parse.h
